<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sap.codelab.view.create.CreateMemo"
    tools:showIn="@layout/activity_create_memo">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/memo_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/memo_description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/memo_title_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/map_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memo_description_container" />

    <FrameLayout
        android:id="@+id/map_host"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/map_content_description"
        android:minHeight="240dp"
        app:layout_constraintBottom_toTopOf="@id/selected_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_instructions" />

    <TextView
        android:id="@+id/selected_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_location_selected"
        app:layout_constraintBottom_toTopOf="@id/location_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/memo_location_empty_error"
        android:textColor="@color/colorError"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
